# socratic-coder

./: .gitignore  README.md  TODO.md  pyproject.toml
nick_mimic/: __init__.py  filters.py  infer.py  loader.py  metric.py  optimize.py  redact.py  template.py
nick_mimic/harnesses/: __init__.py  claude.py  codex.py  gemini.py
prompts/: prefix.txt
scripts/: build_dataset.py  data_metrics.py  infer_demo.py  label_samples.py  optimize_prompts.py  train_cloud.py
tests/: test_metric.py  test_template.py
user_mimic/: __init__.py  canonical.py  filters.py  infer.py  loader.py  metric.py  optimize.py  template.py  train.py
user_mimic/backends/: __init__.py  cli_judge.py  cli_lm.py  local_embedder.py
user_mimic/harnesses/: __init__.py  claude.py  codex.py  gemini.py
