[project]
name = "nick_mimic"
version = "0.1.0"
description = "Train/prompt-optimize a Nick-bot on Nick's own agent-session messages."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "tiktoken",
    "dspy-ai",
    "openai",
    "anthropic",
    "numpy",
    "python-dotenv",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nick_mimic"]
