[project]
name = "user_mimic"
version = "0.1.0"
description = "Train/prompt-optimize a user-bot on the user's own agent-session messages."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "tiktoken",
    "dspy-ai",
    "openai",
    "anthropic",
    "numpy",
    "python-dotenv",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
# Track A optimizer extras (local embedder; pulls torch).
optimize = [
    "sentence-transformers>=3.0",
]
# Track B (cloud GPU only): unsloth + Qwen + LoRA SFT.
# DO NOT install locally on a Mac -- requires CUDA. On the cloud box:
#   uv sync --extra train
train = [
    "unsloth",
    "torch>=2.4",
    "transformers>=4.46",
    "datasets>=3.0",
    "peft>=0.13",
    "trl>=0.12",
    "accelerate>=1.0",
    "bitsandbytes>=0.44",
    "sentencepiece",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["user_mimic"]
